--- a/index.html
+++ b/index.html
@@ -1,2 +1,141 @@
-Coming soon
+
+<!doctype html>
+<html>
+
+<head>
+<title>Wei Chen</title>
+
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta name="keywords" content="Wei Chen"> 
+<meta name="description" content="Wei Chen's home page">
+<link rel="stylesheet" href="css/jemdoc.css" type="text/css" />
+<!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+<!-- <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"> -->
+
+</head>
+
+
+<body>
+
+<div id="layout-content" style="margin-top:25px">
+
+
+<table>
+	<tbody>
+		<tr>
+			<td width="75%">
+				<div id="toptitle">
+					<h1>Wei Chen<h1>
+				</div>
+
+                <h3>Incoming PhD Student</h3>
+
+		<p>
+                    Department of Computer Science and Engineering</br>
+                    The Hong Kong University of Science and Technology </br>
+					</br>
+                    Email: weichen020610 AT gmail DOT com </br>
+		</p>
+		<p>
+			<a href="https://github.com/chenwei746"><img src="assets/logos/github_logo.png" height="30px"></a>&nbsp;&nbsp;
+			<a href="https://scholar.google.com.hk/citations?user=4Mh-_JgAAAAJ&hl=zh-CN"><img src="assets/logos/google_logo.png" height="30px"></a>&nbsp;&nbsp;
+			<!-- <a href="https://www.linkedin.com/in/"><img src="assets/logos/linkedin_logo.png" height="30px"></a>&nbsp;&nbsp; -->
+		</p>
+			</td>
+
+			</td>
+			<td width="25%">
+				<img src="assets/imgs/me2.jpeg" width="100%"/>
+			</td>
+		<tr>
+	</tbody>
+</table>
+
+
+<h2>Biography</h2> 
+
+<p>
+    I am an incoming PhD student in the Department of Computer Science and Engineering at The Hong Kong University of Science and Technology, where I will be advised by Prof. <a href="https://zjuchenlong.github.io/">Long Chen</a> in the <a href="https://long-group.cse.ust.hk/">Long Group</a>. 
+    Prior to this, I obtained my bachelor's degree from the School of Computer Science at Wuhan University, under the supervision of Prof. <a href="https://yu-wu.net/">Yu Wu</a>.
+</p>
+<!-- <p> 
+<font color="red"><b> I am currently seeking a research job position starting from Spring 2024, please feel free to contact me if you are interested in my research.</b></font>
+</p> -->
+
+<h2>Research Interests</h2> 
+<p>
+    My research experience is about vision language, previously focusing on visual grounding, and now towards multimodal large language model.
+</p>
+
+<p id="publications">
+<h2>Publications
+</h2>
+</p>
+
+
+<div id="pubs"></div>
+<!-- <ul>     -->
+    <div class="paper" style="clear:left;">
+      <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
+          <img src="assets/imgs/CoMM.png" width="200" >
+      </div>
+      <div class="ptitle" style="padding:1px;margin-left:215px;">
+        <font size=4>
+            CoMM: A Coherent Interleaved Image-Text Dataset for Multimodal Understanding and Generation
+        </font>
+      </div>
+      <div class="pauthors" style="padding:1px;margin-left:215px;">
+        <b>Wei Chen*</b>, Lin Li*, Yongqi Yang*, Bin Wen, Fan Yang, Tingting Gao, Yu Wu, Long Chen
+      </div>
+      <div class="pvenue" style="padding:1px;margin-left:215px;">
+          arXiv:2406.10462
+          <p>
+          [<a href="https://arxiv.org/abs/2406.10462" target="_blank" rel="noopener">paper</a>]
+          [<a href="https://github.com/HKUST-LongGroup/CoMM" target="_blank" rel="noopener">code</a>] 
+          </p>
+      </div>
+    </div>
+
+
+            
+    <div class="paper" style="clear:left;">
+      <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
+          <img src="assets/imgs/EEVG.png" width="200" >
+      </div>
+      <div class="ptitle" style="padding:1px;margin-left:215px;">
+        <font size=4>
+            An Efficient and Effective Transformer Decoder-Based
+            Framework for Multi-Task Visual Grounding
+        </font>
+      </div>
+      <div class="pauthors" style="padding:1px;margin-left:215px;">
+          <b>Wei Chen</b>, Long Chen, Yu Wu
+      </div>
+      <div class="pvenue" style="padding:1px;margin-left:215px;">
+            European Conference on Computer Vision (<b>ECCV</b>), 2024
+          <p>
+          [<a href="" target="_blank" rel="noopener">paper</a>]
+          [<a href="https://github.com/chenwei746/EEVG" target="_blank" rel="noopener">code</a>] 
+          </p>
+      </div>
+    </div>
+  
+
+
+
+<!-- </ul> -->
+
+
+<table width="100%">
+	<tr> 
+		<td align="center">&copy; Wei Chen</td>
+	</tr> 
+</table>
+
+</div>
+
+
+</body>
+
+</html>
 
