--- a/index.html
+++ b/index.html
@@ -63,10 +63,19 @@
 </p> -->
 
 <h2>Research Interests</h2> 
-<p>
-    My research experience is about vision language, previously focusing on visual grounding, and now towards multimodal large language model.
-</p>
-
+<br>
+  <p>My research interests lie in multi-modal content understanding and generation, which include:</p>
+  <ul>
+      <li>
+          <strong>Vision-language alignment in Multi-modal Large Language Models (MLLM)</strong>
+      </li>
+      <li>
+          <strong>Reinforcement Learning from Human Feedback (RLHF) in MLLM</strong>
+      </li>
+      <li>
+          <strong>Developing benchmarks for comprehensively evaluating MLLM capabilities</strong>
+      </li>
+  </ul>
 <p id="publications">
 <h2>Publications
 </h2>
