--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Department of Computer Science and Engineering</br>
                     The Hong Kong University of Science and Technology </br>
 					</br>
-                    Email: weichen020610 AT gmail DOT com </br>
+                    Email: csewei.chen AT connect DOT ust DOT hk </br>
 		</p>
 		<p>
 			<a href="https://github.com/chenwei746"><img src="assets/logos/github_logo.png" height="30px"></a>&nbsp;&nbsp;
@@ -55,7 +55,7 @@
 <h2>Biography</h2> 
 
 <p>
-    I am an incoming PhD student in the Department of Computer Science and Engineering at The Hong Kong University of Science and Technology, where I will be advised by Prof. <a href="https://zjuchenlong.github.io/">Long Chen</a> in the <a href="https://long-group.cse.ust.hk/">Long Group</a>. 
+    I am an incoming PhD student in the Department of Computer Science and Engineering at The Hong Kong University of Science and Technology, where I will be advised by Prof. <a href="https://zjuchenlong.github.io/">Long Chen</a> in the <a href="https://long-group.cse.ust.hk/">LONG Group</a>. 
     Prior to this, I obtained my bachelor's degree from the School of Computer Science at Wuhan University, under the supervision of Prof. <a href="https://yu-wu.net/">Yu Wu</a>.
 </p>
 <!-- <p> 
