--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="pvenue" style="padding:1px;margin-left:215px;">
             European Conference on Computer Vision (<b>ECCV</b>), 2024
           <p>
-          [<a href="" target="_blank" rel="noopener">paper</a>]
+          [<a href="https://arxiv.org/pdf/2408.01120" target="_blank" rel="noopener">paper</a>]
           [<a href="https://github.com/chenwei746/EEVG" target="_blank" rel="noopener">code</a>] 
           </p>
       </div>
