--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<h1>Wei Chen<h1>
 				</div>
 
-                <h3>Incoming PhD Student</h3>
+                <h3>PhD Student</h3>
 
 		<p>
                     Department of Computer Science and Engineering</br>
