--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <h2>Biography</h2> 
 
 <p>
-    I am a PhD student in the Department of Computer Science and Engineering at The Hong Kong University of Science and Technology, where I will be advised by Prof. <a href="https://zjuchenlong.github.io/">Long Chen</a> in the <a href="https://long-group.cse.ust.hk/">LONG Group</a>. 
+    I am a PhD student in the Department of Computer Science and Engineering at The Hong Kong University of Science and Technology, where I am advised by Prof. <a href="https://zjuchenlong.github.io/">Long Chen</a> in the <a href="https://long-group.cse.ust.hk/">LONG Group</a>. 
     Prior to this, I obtained my bachelor's degree from the School of Computer Science at Wuhan University, under the supervision of Prof. <a href="https://yu-wu.net/">Yu Wu</a>.
 </p>
 <!-- <p> 
