--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 			</td>
 			<td width="25%">
-				<img src="assets/imgs/me2.jpeg" width="100%"/>
+				<img src="assets/imgs/me3.jpg" width="100%"/>
 			</td>
 		<tr>
 	</tbody>
