--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <b>Wei Chen*</b>, Lin Li*, Yongqi Yang*, Bin Wen, Fan Yang, Tingting Gao, Yu Wu, Long Chen
       </div>
       <div class="pvenue" style="padding:1px;margin-left:215px;">
-          arXiv:2406.10462
+            Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025
           <p>
           [<a href="https://arxiv.org/abs/2406.10462" target="_blank" rel="noopener">paper</a>]
           [<a href="https://github.com/HKUST-LongGroup/CoMM" target="_blank" rel="noopener">code</a>] 
