--- a/index.html
+++ b/index.html
@@ -86,6 +86,48 @@
 <!-- <ul>     -->
     <div class="paper" style="clear:left;">
       <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
+          <img src="assets/imgs/RelationR1.png" width="200" >
+      </div>
+      <div class="ptitle" style="padding:1px;margin-left:215px;">
+        <font size=4>
+          Relation-R1: Cognitive Chain-of-Thought Guided Reinforcement Learning for Unified Relational Comprehension
+        </font>
+      </div>
+      <div class="pauthors" style="padding:1px;margin-left:215px;">
+        Lin Li*, <b>Wei Chen*</b>, Jiahui Li, Long Chen
+      </div>
+      <div class="pvenue" style="padding:1px;margin-left:215px;">
+          arXiv:2504.14642
+          <p>
+          [<a href="https://arxiv.org/pdf/2504.14642v1" target="_blank" rel="noopener">paper</a>]
+          [<a href="https://github.com/HKUST-LongGroup/Relation-R1" target="_blank" rel="noopener">code</a>] 
+          </p>
+      </div>
+    </div>
+
+    <div class="paper" style="clear:left;">
+      <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
+          <img src="assets/imgs/DCD.png" width="200" >
+      </div>
+      <div class="ptitle" style="padding:1px;margin-left:215px;">
+        <font size=4>
+          Decoupling Contrastive Decoding: Robust Hallucination Mitigation in Multimodal Large Language Models
+        </font>
+      </div>
+      <div class="pauthors" style="padding:1px;margin-left:215px;">
+        <b>Wei Chen</b>, Xin Yan, Bin Wen, Fan Yang, Tingting Gao, Di Zhang, Long Chen
+      </div>
+      <div class="pvenue" style="padding:1px;margin-left:215px;">
+          arXiv:2504.08809
+          <p>
+          [<a href="https://arxiv.org/pdf/2504.08809" target="_blank" rel="noopener">paper</a>]
+          <!-- [<a href="./" target="_blank" rel="noopener">code</a>]  -->
+          </p>
+      </div>
+    </div>
+
+    <div class="paper" style="clear:left;">
+      <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
           <img src="assets/imgs/CoMM.png" width="200" >
       </div>
       <div class="ptitle" style="padding:1px;margin-left:215px;">
