--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </font>
       </div>
       <div class="pauthors" style="padding:1px;margin-left:215px;">
-        Lin Li*, <b>Wei Chen*</b>, Jiahui Li, Long Chen
+        Lin Li*, <b>Wei Chen*</b>, Jiahui Li, Kwang-Ting Cheng, Long Chen
       </div>
       <div class="pvenue" style="padding:1px;margin-left:215px;">
           arXiv:2504.14642
