--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         Lin Li*, <b>Wei Chen*</b>, Jiahui Li, Kwang-Ting Cheng, Long Chen
       </div>
       <div class="pvenue" style="padding:1px;margin-left:215px;">
-          arXiv:2504.14642
+          AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2026
           <p>
           [<a href="https://arxiv.org/pdf/2504.14642v1" target="_blank" rel="noopener">paper</a>]
           [<a href="https://github.com/HKUST-LongGroup/Relation-R1" target="_blank" rel="noopener">code</a>] 
@@ -118,7 +118,7 @@
         <b>Wei Chen</b>, Xin Yan, Bin Wen, Fan Yang, Tingting Gao, Di Zhang, Long Chen
       </div>
       <div class="pvenue" style="padding:1px;margin-left:215px;">
-          arXiv:2504.08809
+          Neural Information Processing Systems (<b>NeurIPS</b>), 2025
           <p>
           [<a href="https://arxiv.org/pdf/2504.08809" target="_blank" rel="noopener">paper</a>]
           <!-- [<a href="./" target="_blank" rel="noopener">code</a>]  -->
@@ -139,7 +139,7 @@
         <b>Wei Chen*</b>, Lin Li*, Yongqi Yang*, Bin Wen, Fan Yang, Tingting Gao, Yu Wu, Long Chen
       </div>
       <div class="pvenue" style="padding:1px;margin-left:215px;">
-            Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025
+            Computer Vision and Pattern Recognition (<b>CVPR Highlight</b>), 2025
           <p>
           [<a href="https://arxiv.org/abs/2406.10462" target="_blank" rel="noopener">paper</a>]
           [<a href="https://github.com/HKUST-LongGroup/CoMM" target="_blank" rel="noopener">code</a>] 
