Update DCD code

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           Neural Information Processing Systems (<b>NeurIPS</b>), 2025
           <p>
           [<a href="https://arxiv.org/pdf/2504.08809" target="_blank" rel="noopener">paper</a>]
-          <!-- [<a href="./" target="_blank" rel="noopener">code</a>]  -->
+          [<a href="https://github.com/HKUST-LongGroup/DCD" target="_blank" rel="noopener">code</a>] 
           </p>
       </div>
     </div>
