Add paper Thyme

--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
 
     <div class="paper" style="clear:left;">
       <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
+          <img src="assets/imgs/Thyme.png" width="200" >
+      </div>
+      <div class="ptitle" style="padding:1px;margin-left:215px;">
+        <font size=4>
+          Thyme: Think Beyond Images
+        </font>
+      </div>
+      <div class="pauthors" style="padding:1px;margin-left:215px;">
+        Yi-Fan Zhang, Xingyu Lu, Shukang Yin, Chaoyou Fu, <b>Wei Chen</b>, Xiao Hu, Bin Wen, et al.
+      </div>
+      <div class="pvenue" style="padding:1px;margin-left:215px;">
+          Arxiv Preprint, 2025
+          <p>
+          [<a href="https://arxiv.org/pdf/2508.11630" target="_blank" rel="noopener">paper</a>]
+          [<a href="https://github.com/yfzhang114/Thyme" target="_blank" rel="noopener">code</a>] 
+          <p>
+          </p>
+      </div>
+    </div>
+
+    <div class="paper" style="clear:left;">
+      <div class="pimg" style="float:left;margin-bottom:10px;padding-left:3px;border-bottom:solid 1px #EEE;box-shadow:0 0px 2px">
           <img src="assets/imgs/DCD.png" width="200" >
       </div>
       <div class="ptitle" style="padding:1px;margin-left:215px;">
