Update research interest and add internship seeking

--- a/index.html
+++ b/index.html
@@ -73,9 +73,14 @@
           <strong>Reinforcement Learning from Human Feedback (RLHF) in MLLM</strong>
       </li>
       <li>
-          <strong>Developing benchmarks for comprehensively evaluating MLLM capabilities</strong>
+          <strong>Unified multi-modal understanding and generation with mutual enhancement</strong>
       </li>
   </ul>
+
+<p> 
+<font color="red"><b>🔍 I am currently seeking Summer 2026 internships related to Multi-modal Large Language Models (MLLM). Please feel free to contact me if you have any opportunities!</b></font>
+</p>
+
 <p id="publications">
 <h2>Publications
 </h2>
